人员管理，演训管理功能完善
