# docs/swagger.json
@@ -2420,6 +2420,136 @@
                 }
             }
         },
+        "/api/train/create": {
+            "get": {
+                "security": [
+                    {
+                        "LoginToken": []
+                    }
+                ],
+                "description": "创建",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "API.train"
+                ],
+                "summary": "创建",
+                "parameters": [
+                    {
+                        "description": "请求信息",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/train.createRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/train.createResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/code.Failure"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/train/exp": {
+            "post": {
+                "description": "导出",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "API.train"
+                ],
+                "summary": "导出",
+                "parameters": [
+                    {
+                        "description": "请求信息",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/train.expRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/train.expResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/code.Failure"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/tran/list": {
+            "get": {
+                "security": [
+                    {
+                        "LoginToken": []
+                    }
+                ],
+                "description": "人员列表",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "API.train"
+                ],
+                "summary": "人员列表",
+                "parameters": [
+                    {
+                        "description": "请求信息",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/train.listRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/train.listResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/code.Failure"
+                        }
+                    }
+                }
+            }
+        },
         "/helper/md5/{str}": {
             "get": {
                 "description": "加密",
@@ -3347,10 +3477,100 @@
             }
         },
         "personnel.createRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "bankNum": {
+                    "description": "银行卡号",
+                    "type": "string"
+                },
+                "bloodType": {
+                    "description": "血型cm",
+                    "type": "string"
+                },
+                "company": {
+                    "description": "工作单位",
+                    "type": "string"
+                },
+                "headNum": {
+                    "description": "头围cm",
+                    "type": "integer"
+                },
+                "idNum": {
+                    "description": "身份证号",
+                    "type": "string"
+                },
+                "major": {
+                    "description": "专业",
+                    "type": "string"
+                },
+                "phoneNum": {
+                    "description": "电话号",
+                    "type": "string"
+                },
+                "politicalOutLook": {
+                    "description": "社会面貌：0 :普通公民，1：团员，2：党员",
+                    "type": "integer"
+                },
+                "position": {
+                    "description": "职称/等级",
+                    "type": "string"
+                },
+                "rewardStatus": {
+                    "description": "奖励情况",
+                    "type": "string"
+                },
+                "shoeSize": {
+                    "description": "鞋号cm",
+                    "type": "integer"
+                },
+                "trainStatus": {
+                    "description": "演训情况",
+                    "type": "string"
+                },
+                "userAge": {
+                    "description": "年龄",
+                    "type": "integer"
+                },
+                "userDate": {
+                    "description": "出生年月日",
+                    "type": "string"
+                },
+                "userHeight": {
+                    "description": "身高cm",
+                    "type": "integer"
+                },
+                "userLevel": {
+                    "description": "级别",
+                    "type": "string"
+                },
+                "userName": {
+                    "description": "姓名",
+                    "type": "string"
+                },
+                "userSex": {
+                    "description": "性别（0：女，1：男）",
+                    "type": "integer"
+                },
+                "userTeam": {
+                    "description": "部队编号",
+                    "type": "integer"
+                },
+                "userWeight": {
+                    "description": "体重cm",
+                    "type": "integer"
+                }
+            }
         },
         "personnel.createResponse": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
         },
         "personnel.expRequest": {
             "type": "object"
@@ -3362,7 +3582,151 @@
             "type": "object"
         },
         "personnel.listResponse": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "count": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/s_personnel.SPersonnel"
+                    }
+                }
+            }
+        },
+        "s_personnel.SPersonnel": {
+            "type": "object",
+            "properties": {
+                "bankNum": {
+                    "description": "银行卡号",
+                    "type": "string"
+                },
+                "bloodType": {
+                    "description": "血型cm",
+                    "type": "string"
+                },
+                "company": {
+                    "description": "工作单位",
+                    "type": "string"
+                },
+                "deleted": {
+                    "type": "integer"
+                },
+                "headNum": {
+                    "description": "头围cm",
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "idNum": {
+                    "description": "身份证号",
+                    "type": "string"
+                },
+                "major": {
+                    "description": "专业",
+                    "type": "string"
+                },
+                "phoneNum": {
+                    "description": "电话号",
+                    "type": "string"
+                },
+                "politicalOutLook": {
+                    "description": "社会面貌：0 :普通公民，1：团员，2：党员",
+                    "type": "integer"
+                },
+                "position": {
+                    "description": "职称/等级",
+                    "type": "string"
+                },
+                "rewardStatus": {
+                    "description": "奖励情况",
+                    "type": "string"
+                },
+                "shoeSize": {
+                    "description": "鞋号cm",
+                    "type": "integer"
+                },
+                "trainStatus": {
+                    "description": "演训情况",
+                    "type": "string"
+                },
+                "userAge": {
+                    "description": "年龄",
+                    "type": "integer"
+                },
+                "userDate": {
+                    "description": "出生年月日",
+                    "type": "string"
+                },
+                "userHeight": {
+                    "description": "身高cm",
+                    "type": "integer"
+                },
+                "userLevel": {
+                    "description": "级别",
+                    "type": "string"
+                },
+                "userName": {
+                    "description": "姓名",
+                    "type": "string"
+                },
+                "userSex": {
+                    "description": "性别（0：女，1：男）",
+                    "type": "integer"
+                },
+                "userTeam": {
+                    "description": "部队编号",
+                    "type": "integer"
+                },
+                "userWeight": {
+                    "description": "体重cm",
+                    "type": "integer"
+                }
+            }
+        },
+        "s_train.STrain": {
+            "type": "object",
+            "properties": {
+                "deleted": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "trainData": {
+                    "description": "时间年月日",
+                    "type": "string"
+                },
+                "trainName": {
+                    "description": "演训名称",
+                    "type": "string"
+                },
+                "trainNum": {
+                    "description": "参赛人员数量",
+                    "type": "integer"
+                },
+                "trainOrg": {
+                    "description": "地点（市）",
+                    "type": "string"
+                },
+                "trainPlace": {
+                    "description": "组织方",
+                    "type": "string"
+                },
+                "trainProject": {
+                    "description": "科目",
+                    "type": "string"
+                },
+                "trainTime": {
+                    "description": "宣传图片，视频",
+                    "type": "string"
+                }
+            }
         },
         "tool.dbData": {
             "type": "object",
@@ -3486,6 +3850,38 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/tool.tableData"
+                    }
+                }
+            }
+        },
+        "train.createRequest": {
+            "type": "object"
+        },
+        "train.createResponse": {
+            "type": "object"
+        },
+        "train.expRequest": {
+            "type": "object"
+        },
+        "train.expResponse": {
+            "type": "object"
+        },
+        "train.listRequest": {
+            "type": "object"
+        },
+        "train.listResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "count": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/s_train.STrain"
                     }
                 }
             }
